--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,8 +26,64 @@ html,body{
   position: relative;
   width: 100%;
   height: 100%;
-  /*overflow: hidden;*/
+  overflow: hidden;
   background-color: #fff4c2;/*视频中为ddd*/
+  perspective: 1800px;
+  /*perspective-origin: 50% 0;*/
+
+  @at-root .img-figure{
+    position: absolute;
+    cursor: pointer;
+    width: 320px;
+    height: 360px;
+    padding: 40px;
+    background-color: #fff;
+    box-sizing: border-box;
+    z-index: 1;
+    transform-style: preserve-3d;
+    transform-origin: 0 50% 0;
+    transition: 0.6s ;
+
+    img{
+      width: 240px;
+      height: 240px;
+    }
+
+
+    @at-root .img-title {
+      text-align: center;
+      margin: 20px 0 0 0;
+      color: #a7a0a2;
+      font-size:20px
+
+    }
+    @at-root .img-back {
+
+      position: absolute;
+      top:0;
+      left: 0;
+      width:320px;
+      height: 360px;
+      padding: 100px 40px;
+      line-height: 2em;
+      box-sizing: border-box;
+      color: #9a9a9a;
+      background-color: #fff;
+      text-align: center;
+      transform: rotateY(180deg) ;
+      backface-visibility: hidden;
+
+
+    }
+
+
+
+  }
+
+
+
+
+
 }
 
 /*images end*/
