--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,7 +14,7 @@ html,body{
   /*position: absolute;*/
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #ddd;
 
 }
 
@@ -35,15 +35,14 @@ html,body{
 /*stage end*/
 
 /*tilte start*/
-.title{
+.title-box{
   position: absolute;
   width: 500px;
   top: 50px;
   left: 50%;
   margin-left: -250px;
-  h1{
+  .title{
     text-align: center;
-    font-family:'HeitiSCb367196ab18ea6';
     color: #555555;
   }
 }
